# ESP_DL_FaceRecognition

./: .cproject  .gitignore  .project  .~lock.partitions.csv#  CMakeLists.txt  README.md  partitions.csv  partitions.csv.old  sdkconfig  sdkconfig.old
components/esp-dl/: CMakeLists.txt
components/esp-dl/include/detect/: dl_detect_define.hpp
components/esp-dl/include/model_zoo/: human_face_detect_mnp01.hpp  human_face_detect_msr01.hpp
components/esp-modules/ai/: who_ai_utils.cpp  who_cat_face_detection.cpp  who_color_detection.cpp  who_human_face_detection.cpp  who_human_face_recognition.cpp  who_motion_detection.cpp
components/esp-modules/button/: who_adc_button.c  who_button.c
components/esp-modules/camera/: who_camera.c
components/esp-modules/imu/: qma7981.c
components/esp-modules/lcd/: who_lcd.c
components/esp-modules/led/: who_led.c
components/esp-modules/trace/: who_trace.c
components/esp-modules/web/: app_httpd.cpp  app_mdns.c
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  main.h
main/DL_Framework/: error_reporter.h
main/camera/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  image_provider.cc  image_provider.h  utils.c  utils.cpp  utils.h
main/detection/: CMakeLists.txt  detection.cpp  detection.h
main/http/: CMakeLists.txt  app_mdns.c  http_stream.cpp  http_stream.h
main/json/: CMakeLists.txt  cjson.cc  cjson.h
main/recognizer/: CMakeLists.txt  recognizer.cpp  recognizer.h
main/websocket/: CMakeLists.txt  websocket.cc  websocket.h
main/wifi/: CMakeLists.txt  wi-fi.c  wi-fi.h
(+1 files in other folders)
